fix extra space on the left of the labels with badges

--- a/app/assets/stylesheets/survey.scss
+++ b/app/assets/stylesheets/survey.scss
@@ -82,6 +82,7 @@ a:focus {
 }
 
 .label-with-badges {
+  display: inline-block;
   padding: 5px 10px;
 }
 
